[package]
name = "apt-cache"
version = "0.1.0"
edition = "2021"
description = "A simple apt repository cache"
authors = ["AdriDoesThings <contact@adridoesthings.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.6.18"
bytes = "1.4.0"
futures-core = "0.3.28"
futures-util = "0.3.28"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.170", features = ["derive"] }
sha1 = "0.10.5"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
toml = "0.7.6"

[profile.release]
lto = true
opt-level = 3